# favorite-tree

./: .gitignore  README.md
.github/workflows/: tree_api_docker_compose.yml  tree_api_microk8s.yml  tree_api_unit_tests.yml
api/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  favorite-tree-swagger-api.json  gunicorn_logging.conf  pyproject.toml  tox.ini
api/main/: app.py  config.py  core.py  logger.py
api/main/extensions/: __init__.py  routes_extension.py
api/main/migrations/versions/: 9b26157970d9_create_tree_table.py
api/main/models/: __init__.py  base.py  tree.py
api/main/seeds/: tree.py
api/main/v1/tree/: resource.py  schema.py
api/tests/: conftest.py  test_app.py
api/tests/sql_secrets/: sql_uri.txt
automation/: analyze_demo_tree_api.sh  install_demo_tree_api.sh
chart/tree/: Chart.yaml  README.md  values.schema.json  values.yaml
chart/tree-cert-manager-issuer/: Chart.yaml  README.md  values.yaml
chart/tree-cert-manager-issuer/templates/: _helpers.tpl  issuer.yaml
chart/tree/charts/tree-api/: Chart.yaml  README.md  values.yaml
chart/tree/charts/tree-api/templates/: _helpers.tpl  alb-ingress.yml  configmap.yml  deployment.yml  hpa.yaml  ingress.yml  istio-destination-rules.yaml  istio-gateway.yaml  istio-virtual-services.yaml  service.yml  user-custom-secret-envs.yaml
docs/: tree_arch_design.drawio  tree_blueprint.drawio
terraform/: README.md  backend  backend.tf  build.yaml  cert-manager.tf  main.tf  tree.tf  variables.tf
